--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,4 +98,10 @@
   .premium-red-bg {
     background: linear-gradient(90deg, #5C0E0E, #8E1717, #C32222);
   }
+  .premium-purple-blue-text {
+    background: linear-gradient(90deg, #8A2BE2, #4169E1);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: bold;
+  }
 }
